--- a/bistro-boss-client-home-page/package.json
+++ b/bistro-boss-client-home-page/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
     "daisyui": "^2.51.6",
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
